Sweeper should not CompiledIC::set_to_clean with ICStubs for is_unloading() nmethods

XMLWordPrintable

    • gc
    • b26
    • x86_64
    • linux
    • Verified

      The following test is failing the JDK14 CI:

      applications/runthese/RunThese24H.java

      Here's a snippet from the hs_err_pid file:

      # Internal Error (open/src/hotspot/share/gc/z/zVerify.cpp:43), pid=7849, tid=7882
      # guarantee(ZAddress::is_good(addr)) failed: Bad oop 0x00001075670c1418 found at 0x00007fb7ed656418
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+24) (fastdebug build 14-ea+24-1081)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+24-1081, mixed mode, tiered, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x181ae30] verify_oop(oop*)+0xa0

      --------------- T H R E A D ---------------

      Current thread (0x00007fb8042d6030): VMThread "VM Thread" [stack: 0x00007fb8084a8000,0x00007fb8085a8000] [id=7882]

      Stack: [0x00007fb8084a8000,0x00007fb8085a8000], sp=0x00007fb8085a64a0, free space=1017k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x181ae30] verify_oop(oop*)+0xa0
      V [libjvm.so+0x132699b] nmethod::oops_do(OopClosure*, bool)+0x2bb
      V [libjvm.so+0xd7831e] CodeBlobToOopClosure::do_code_blob(CodeBlob*)+0x2e
      V [libjvm.so+0x180776b] ZRootsIteratorCodeBlobClosure::do_code_blob(CodeBlob*)+0x3b
      V [libjvm.so+0x18077dd] ZRootsIteratorThreadClosure::do_thread(Thread*)+0x5d
      V [libjvm.so+0x1672cd9] Threads::possibly_parallel_threads_do(bool, ThreadClosure*)+0x169
      V [libjvm.so+0x1805588] ZRootsIterator::oops_do(ZRootsIteratorClosure*)+0x1f8
      V [libjvm.so+0x181b6ad] ZVerify::before_zoperation()+0x10d
      V [libjvm.so+0x17cbf66] VM_ZOperation::doit()+0x46
      V [libjvm.so+0x172c983] VM_Operation::evaluate()+0x143
      V [libjvm.so+0x175b4b8] VMThread::evaluate_operation(VM_Operation*) [clone .constprop.66]+0x2b8
      V [libjvm.so+0x175bf8e] VMThread::loop()+0x91e
      V [libjvm.so+0x175c22a] VMThread::run()+0xca
      V [libjvm.so+0x16759d6] Thread::call_run()+0xf6
      V [libjvm.so+0x13a7b9e] thread_native_entry(Thread*)+0x10e


      Starting this as a confidential bug since this is a closed test.
      Update: Leonid said the failure sighting can be non-confidential.

            Assignee:
            Erik Ă–sterlund
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: