8234426: Sweeper should not CompiledIC::set_to_clean with ICStubs for is_unloading() nmethods

Reviewed-by: stefank, thartmann